# aipl

./: CLAUDE.md  Cargo.toml  TODO.txt
crates/aipl-codegen/: Cargo.toml
crates/aipl-codegen/src/: add.aipl  add.clif  assert_loc.aipl  assert_loc.clif  caret_block.aipl  caret_block.clif  common_space_prefix.aipl  count_while.aipl  dedent.aipl  dogfood.clif  dogfood_entries.aipl  fill_or_add_section.aipl  fill_or_add_section.clif  fill_or_add_section_file.aipl  fill_or_add_section_file.clif  fill_section.aipl  fill_section.clif  find_trailing_whitespace.aipl  find_trailing_whitespace.clif  int_fits.aipl  is_operator_name.aipl  lex_aipl.aipl  lexer.aipl  lib.rs  line_at.aipl  line_at.clif  lines.aipl  normalize_output.aipl  parse_test_section_header.aipl  parse_test_section_header.clif  process_raw_string.aipl  process_raw_string.clif  strip_test_sections.aipl  strip_test_sections.clif  trim_end_while.aipl  trim_prefix.aipl  trim_suffix.aipl  trim_while.aipl
crates/aipl-fmt/: Cargo.toml
crates/aipl-fmt/src/: doc.rs  lib.rs
crates/aipl-linker/: Cargo.toml  build.rs
crates/aipl-linker/runtime/: aipl_runtime.rs
crates/aipl-linker/src/: lib.rs
crates/aipl-loader/: Cargo.toml
crates/aipl-loader/src/: kwargs.rs  lib.rs
crates/aipl-mono/: Cargo.toml
crates/aipl-mono/src/: builtin_all.aipl  builtin_count_while.aipl  builtin_int_parse.aipl  builtin_is_some_and.aipl  builtin_trim_while.aipl  check.rs  fold.rs  lib.rs
crates/aipl-parser/: Cargo.toml
crates/aipl-parser/src/: lib.rs
crates/aipl-syntax/: Cargo.toml
crates/aipl-syntax/src/: lib.rs
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: aipl.tmLanguage.json
examples/: arrays.aipl  hello.aipl  imports.aipl  strings.aipl  uses_strlen.aipl
examples/lib/: strlen.aipl
examples/math/: geometry.aipl
src/: lib.rs  main.rs
tests/: cases.rs  check.rs  codegen.rs  doc_cmd.rs  dogfood_ir.rs  ffi.rs  fmt.rs  highlighting.rs  lexer_dogfood.rs  mono.rs  parser.rs  performance_metrics.md
tests/cases/: higher-order-in-test.aipl
tests/cases/arithmetic/: division.aipl  err_arith_on_bool.aipl  jit_addition.aipl  min_max.aipl  modulo_basic.aipl  modulo_negative_signed.aipl  modulo_precedence.aipl  precedence.aipl  unary_minus.aipl
tests/cases/arrays/: array_of_optionals.aipl  array_of_structs.aipl  bool_array.aipl  bool_packed.aipl  bool_packed_ops.aipl  char_and_bool_elems.aipl  char_str_alias.aipl  contains.aipl  err_index_non_array.aipl  err_match_duplicate.aipl  err_match_elem_type.aipl  err_match_non_exhaustive.aipl  err_match_non_literal.aipl  err_match_wildcard_not_last.aipl  index_optional.aipl  match.aipl  min_max.aipl  nested_array_annotation.aipl  nested_array_to_str.aipl  nested_optional_deep_none.aipl  nested_optional_none_levels.aipl  nested_optional_repr.aipl  nested_optionals.aipl  nested_str_array.aipl  push_aliased_array.aipl  reverse.aipl  slice.aipl  slice_span.aipl  starts_ends_with.aipl  str_array.aipl  sum_and_len.aipl  to_str_arrays.aipl
tests/cases/bindings/: err_undefined_ident.aipl  err_unknown_identifier.aipl
tests/cases/booleans/: bool_equality.aipl  bool_equality_in_if.aipl  bool_literals.aipl  err_bool_eq_with_i64.aipl
tests/cases/builtins/: err_import_conflicts_with_local.aipl  err_span_without_import.aipl  err_unimported_builtin.aipl  err_unknown_builtin.aipl  err_use_without_import.aipl  err_value_or_type_mismatch.aipl  import_then_use.aipl  reverse.aipl  span.aipl  user_fn_shadows_builtin.aipl  value_or.aipl
tests/cases/chars/: char_at_out_of_bounds.aipl  char_equality.aipl  char_inequality.aipl  char_param_type.aipl  char_to_str_roundtrip.aipl  err_non_ascii_char.aipl  (+4 more)
tests/ffi_fixtures/: calc.aipl  mathlib.aipl
tests/fmt/: allow_marker.aipl  binop_glue_rhs.aipl  binop_raw_block.aipl  collections_and_slices.aipl  comments.aipl  fn_shapes.aipl  import_sort.aipl  kwargs_spacing.aipl  lambdas_and_ops.aipl  literals_verbatim.aipl  match_and_variants.aipl  method_chain.aipl  range_expr.aipl  sections_preserved.aipl  triple_align.aipl  wrap_long_call.aipl
(+438 files in other folders)
