[package]
name = "aipl"
version = "0.1.0"
edition = "2021"
description = "AIPL language — facade crate tying the compiler crates together"
license = "MIT"

[workspace]
members = ["crates/*"]

# Centralized dependency versions. Member crates opt in with
# `<dep> = { workspace = true }`; bump a version here and every crate
# that uses it follows. Internal path crates live here too so the path is
# written once (resolved relative to this workspace root).
[workspace.dependencies]
# Internal crates.
aipl-syntax = { path = "crates/aipl-syntax" }
aipl-parser = { path = "crates/aipl-parser" }
aipl-mono = { path = "crates/aipl-mono" }
aipl-codegen = { path = "crates/aipl-codegen" }
aipl-loader = { path = "crates/aipl-loader" }
aipl-linker = { path = "crates/aipl-linker" }
# External crates.
cranelift = "0.127.4"
cranelift-jit = "0.127.4"
cranelift-module = "0.127.4"
cranelift-native = "0.127.4"
cranelift-reader = "0.127.4"
cranelift-object = "0.127.4"
target-lexicon = "0.13"
gazelle-parser = "0.9.3"
gazelle-macros = "0.9.3"
serde_json = "1"
regex = "1"

[dependencies]
aipl-syntax = { workspace = true }
aipl-parser = { workspace = true }
aipl-mono = { workspace = true }
aipl-codegen = { workspace = true }
aipl-loader = { workspace = true }
aipl-linker = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
regex = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "aipl"
path = "src/main.rs"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
missing_transmute_annotations = "allow"
large_enum_variant = "allow"
filter_map_bool_then = "allow"
needless_range_loop = "allow"
