[package]
name = "aipl-mono"
version = "0.1.0"
edition = "2021"
description = "AIPL monomorphization pass"
license = "MIT"

[dependencies]
aipl-syntax = { workspace = true }
# Parses `aipl_syntax::BUILTIN_SIGNATURES` so mono's own return-type inference
# for builtin calls substitutes the same declared signatures the checker uses,
# instead of a hand-maintained duplicate.
aipl-parser = { workspace = true }
# Loads the AIPL-implemented builtin sources (`AIPL_BUILTIN_SOURCES`) through
# the real loader, so their `import { .. } from builtins;` resolves and their
# bodies can call other builtins — same rewriting user code gets.
aipl-loader = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
